--- a/WebAppAsp/EManage.csproj
+++ b/WebAppAsp/EManage.csproj
@@ -107,6 +107,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\navigation.js" />
+    <Content Include="Scripts\tiers.js" />
     <Content Include="Tiers.aspx" />
     <Content Include="Asset\webApp.ico" />
     <Content Include="Contact.aspx" />
